# kernel

./: meson.build  meson_options.txt
arch/aarch64/: meson.build
arch/x86_64/: meson.build
boot/aarch64/rpi3/default/: crossfile.ini  init.S  linker.ld  meson.build
boot/x86_64/legacy/: meson.build
boot/x86_64/uefi/: crossfile.ini  entry.cc  meson.build
main/: kmain.cc  kmain.hh
scripts/: build.sh
